Primeiro commit do projeto

--- a/apipessoa/appsettings.json
+++ b/apipessoa/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=RODNEYCOM-DEV;Initial Catalog=pessoa-db;Integrated Security=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=Rayanne;Initial Catalog=PIM;Integrated Security=True;Trust Server Certificate=True"
   },
   "Logging": {
     "LogLevel": {
